# WEB_Homework_7

./: config.ini  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: ca434eb4987e_init.py
src/: db.py  models.py
