[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^20.1.0"
alchemy = "^20.5"
alembic = "^1.13.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
